minor bug fixes with text alignment

--- a/styles/CSS.css
+++ b/styles/CSS.css
@@ -180,3 +180,7 @@ body {
 .anchorlinks {
     text-align: center;
 }
+
+.nav {
+    text-align: center;
+}
